1、上传到jcenter配置

--- a/pullrefresh/build.gradle
+++ b/pullrefresh/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'maven'
+apply plugin: 'com.novoda.bintray-release'
+publish {
+    userOrg = 'guaixiangjieke'//bintray.com用户名
+    groupId = 'com.nl.pullRefresh'//jcenter上的路径
+    artifactId = 'pullRefresh'//项目名称
+    publishVersion = '0.0.1'//版本号
+    desc = '上下拉刷新库'//描述，不重要
+    website = 'https://github.com/guaixiangjieke/PullRefresh.git'//网站，最好有，不重要
+}
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -15,11 +24,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions{
+        abortOnError false
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
